--- a/fund.css
+++ b/fund.css
@@ -57,12 +57,30 @@ section{
 
 .update_donation{
     border: 1px solid black;
+    position: relative;
     border-radius: 3%;
     color: white;
-    background-color: var(--clr-black);
+    background-color: var(--clr-black); 
     padding: 10px;
     margin-bottom: 10px;
     text-align: center;
+}
+
+.update_donation::before{
+    content: "";
+    display: block;
+   position: absolute;
+    background: linear-gradient(
+        105deg,
+          transparent, 
+        var(--clr-black),
+        var(--clr-black));
+    width:1rem;
+    height: 1rem;
+    
+    left:85%;
+    top: 1.8rem;
+    transform: rotate(50deg);
 }
 
 #amount{
@@ -97,7 +115,7 @@ section{
     transition: 1s ease 0.3s;
 }
 
-article >p{
+article >p:first-of-type{
     margin: 1rem;
     font-size: 1.2rem;
     color: var(--clr-grey);
@@ -112,26 +130,32 @@ header>span{
 }
 
 input[type="text"] {
-  
     background: none;
     padding: 20px 10px;
     color: black;
     font-weight: bold;
     border: 1px solid var(--clr-light-grey);
     border-radius: 5px;
-    margin: 1rem 1rem;
+    margin: 0.5rem 1rem;
   }
 
   .input_box{
       width: 100px;
   }
+
   button{
       
       padding: 20px 35px;
       border-radius: 5px;
+      color: white;
       border: 1px solid var(--clr-light-grey);
       background-color: var(--clr-green);
   }
+article>p:last-of-type{
+    margin: 0.3rem 0rem 0.8rem 1rem;
+    font-style: italic;
+    color: var(--clr-blue);
+}
 
 .static_button{
     margin: 1rem 0;
