--- a/fund.css
+++ b/fund.css
@@ -87,7 +87,7 @@ section{
     font-weight: bold;
 }
 
-.outer{
+.outer_box{
   
     border: 1px solid var(--clr-light-grey);
 }
@@ -129,6 +129,10 @@ header>span{
     font-weight: 400;
 }
 
+#donors{
+    color: var(--clr-black);
+}
+
 input[type="text"] {
     background: none;
     padding: 20px 10px;
@@ -144,13 +148,17 @@ input[type="text"] {
   }
 
   button{
-      
       padding: 20px 35px;
       border-radius: 5px;
       color: white;
       border: 1px solid var(--clr-light-grey);
       background-color: var(--clr-green);
   }
+
+button:hover{
+    cursor: pointer;
+    opacity: 1;
+}
 article>p:last-of-type{
     margin: 0.3rem 0rem 0.8rem 1rem;
     font-style: italic;
@@ -160,7 +168,7 @@ article>p:last-of-type{
 .static_button{
     margin: 1rem 0;
     display: flex;
-    gap: 1.4rem;
+    gap: 2.6rem;
 }
 
   .static{
@@ -169,4 +177,12 @@ article>p:last-of-type{
       padding: 10px 20px;
       border: 1px solid var(--clr-light-grey);
       border-radius: 5px;
+  }
+
+  .static:hover{
+      cursor: pointer;
+      transition: 1s ease 0s;
+      background-color: var(--clr-black);
+      color: white;
+      opacity: 1;
   }
