--- a/fund.css
+++ b/fund.css
@@ -30,7 +30,7 @@ picture {
     --ff-sans-normal: "Barlow",sans-serif;
 
 }
-
+/* Set up the body */
 body{
     background-color: white;
     font-family: var(--ff-serif);
@@ -48,9 +48,7 @@ body{
 section{
     width: 300px;
     z-index: 100;
-  
     border-radius: 3px;
-  
     text-decoration: none;
 }
 
@@ -88,11 +86,10 @@ section{
 }
 
 .outer_box{
-  
     border: 1px solid var(--clr-light-grey);
 }
 
-
+/* Styling our progress bar */
 .progress_bar{
     width: 300px;
    height: 10px;
@@ -115,6 +112,7 @@ section{
     transition: 1s ease 0.3s;
 }
 
+/* Styling the content inside our article tags */
 article >p:first-of-type{
     margin: 1rem;
     font-size: 1.2rem;
@@ -135,12 +133,13 @@ header>span{
 
 input[type="text"] {
     background: none;
-    padding: 20px 10px;
+    padding: 20px 60px 20px 20px;
     color: black;
     font-weight: bold;
     border: 1px solid var(--clr-light-grey);
     border-radius: 5px;
-    margin: 0.5rem 1rem;
+    margin: 0.5rem 2.4rem 0.5rem 1rem;
+            /* top right bottom left */
   }
 
   .input_box{
@@ -148,7 +147,7 @@ input[type="text"] {
   }
 
   button{
-      padding: 20px 35px;
+      padding: 20px 20px;
       border-radius: 5px;
       color: white;
       border: 1px solid var(--clr-light-grey);
@@ -157,6 +156,7 @@ input[type="text"] {
 
 button:hover{
     cursor: pointer;
+    background-color: rgb(45, 122, 45);
     opacity: 1;
 }
 article>p:last-of-type{
@@ -165,6 +165,7 @@ article>p:last-of-type{
     color: var(--clr-blue);
 }
 
+/* Styling our static buttons */
 .static_button{
     margin: 1rem 0;
     display: flex;
